# playground

./: .gitignore
alda/: alda.nix  kakariko.alda  overlays.nix  shell.nix
c/: shell.nix
clojure/: deps.edn  shell.nix
clojure/src/playground/: core.clj  hamiltonian_path.clj
data/: .dir-locals.el  overlays.nix  shell.nix
go/: shell.nix  thing.go
haskell-play/: default.nix  haskell-play.cabal  shell.nix
idris/: shell.nix
idris/src/: DataStore.ibc  DataStore.idr  Vect.ibc  Vect.idr
ml/: deps.edn  overlays.nix  shell.nix
ml/src/: user.clj
ml/src/ml/: core.clj
python/: shell.nix
python-clj/: deps.edn  shell.nix
python-clj/src/python-clj/: core.clj  plot.clj
rust/: shell.nix
web/: .dir-locals.el  deps.edn  overlays.nix  shell.nix  statik.nix
web/src/web/: core.clj  dummy.clj  index.clj  style.clj
