cabal-version:       >=1.10

name:                haskell-play
version:             0.1.0.0
license-file:        LICENSE
author:              Cameron Kingsbury
maintainer:          camsbury7@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable haskell-play
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
  default-language:    Haskell2010
